@@ -1101,7 +1101,7 @@ public class MirrorConnectorsIntegrationBaseTest {
     }
 
     protected static void alterMirrorMakerSourceConnectorOffsets(EmbeddedConnectCluster connectCluster, LongUnaryOperator alterOffset, String... topics) {
-        Set<String> topicsSet = new HashSet<>(Arrays.asList(topics));
+        Set<String> topicsSet = Set.of(topics);
         String connectorName = MirrorSourceConnector.class.getSimpleName();
 
         ConnectorOffsets currentOffsets = connectCluster.connectorOffsets(connectorName);
@@ -1131,7 +1131,7 @@ public class MirrorConnectorsIntegrationBaseTest {
     }
 
     protected static void resetSomeMirrorMakerSourceConnectorOffsets(EmbeddedConnectCluster connectCluster, String... topics) {
-        Set<String> topicsSet = new HashSet<>(Arrays.asList(topics));
+        Set<String> topicsSet = Set.of(topics);
         String connectorName = MirrorSourceConnector.class.getSimpleName();
 
         ConnectorOffsets currentOffsets = connectCluster.connectorOffsets(connectorName);
